--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "content": "CC­BY­NC­SA 4.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.1.2",
+    "font-awesome-sass-loader": "^2.0.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3"
   },
@@ -26,6 +28,7 @@
     "eslint-plugin-standard": "^4.0.1",
     "expose-loader": "^0.7.5",
     "file-loader": "^1.1.11",
+    "font-awesome": "^4.7.0",
     "grunt": "^1.0.4",
     "grunt-eslint": "^22.0.0",
     "grunt-jsonlint": "^2.0.0",
